# Author: Jeroen de Haas <jah.dehaas@avans.nl>
cmake_minimum_required(VERSION 3.1.3)
project(pigisland)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(MSVC)
    add_compile_options(/W3)
else()
    add_compile_options(-Wall -Wpedantic)#  -Werror)
    add_compile_options("$<$<CONFIG:DEBUG>:-g>")
endif()

  
add_executable(pigisland
  src/kmint/pigisland/main.cpp
  src/kmint/pigisland/node_algorithm.cpp
  src/kmint/pigisland/resources.cpp
  src/kmint/pigisland/shark.cpp
  src/kmint/pigisland/boat.cpp
  src/kmint/pigisland/pig.cpp 
  src/kmint/pigisland/AStar/AStar.cpp
  src/kmint/pigisland/states/state.cpp
  src/kmint/pigisland/states/hunting.cpp
  src/kmint/pigisland/states/rest.cpp
  src/kmint/pigisland/states/flee.cpp
  src/kmint/pigisland/AStar/AStar.cpp
  src/kmint/pigisland/forcedriven/Wheel.cpp
  src/kmint/pigisland/forcedriven/Vehicle.cpp
  src/kmint/pigisland/forcedriven/Wall.cpp
  src/kmint/pigisland/forcedriven/Walls.cpp
  src/kmint/pigisland/states/wander.cpp
  src/kmint/pigisland/probabilistic/boat_wander.cpp
  src/kmint/pigisland/probabilistic/boat_basestate.cpp
  src/kmint/pigisland/probabilistic/boat_repair.cpp
  include/kmint/pigisland/PriorityMap.hpp "src/kmint/pigisland/forcedriven/Wander.cpp")

target_compile_features(pigisland PUBLIC cxx_std_17)
target_link_libraries(pigisland PRIVATE kmint)
target_include_directories(pigisland PRIVATE 
  src
  include)

add_custom_target(pigisland-resources ALL
  COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/resources" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources")
